# pokerevaluator

./: .gitignore  README.md
alice_vs_bob/: result.json
prime-rust/: Cargo.toml
prime-rust/src/: cardhelper.rs  lib.rs  pokermatch.rs  scoremap.rs
primev2/: README.md  poker.go
primev2/libpoker/: card.go  fast_detector.go  fast_detector_test.go  fast_flush_detector.go  five_cards_builder.go  hand.go  match.go  match_test.go  max_suit_test.go  offset_test.go  score_tbl_builder.go  seven_cards_builder.go
primev3-cpp-clean/: .gitignore  CMakeLists.txt  README.md  算法结果.md
primev3-cpp-clean/libpoker/: CMakeLists.txt  LYCardHelpers.cpp  LYCardHelpers.h  LYOffset.cpp  LYOffset.h  LYPokerConstants.h  LYScoreMap.cpp  LYScoreMap.h
primev3-cpp-clean/src/: poker.cpp
primev3-cpp-clean/test/: LYCardHelpers_tests.cpp  LYOffset_tests.cpp  LYScoreMapHand_tests.cpp  LYScoreMap_tests.cpp  basic_test.cpp
