[package]
name = "prime-rust"
version = "0.1.0"
authors = ["caiqingfeng <caiqingfeng@roadclouding.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"